--- a/NCal.xUnit/NCal.xUnit.csproj
+++ b/NCal.xUnit/NCal.xUnit.csproj
@@ -55,7 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Fxitures.cs" />
+    <Compile Include="Fixtures.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
